--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Anton+SC&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 
 :root {
-  /* change the values below to your colors from your palette */
   --primary-color: #1B1725   ;
   --secondary-color: #534B62 ;
   --accent1-color: #A499B3;
   --accent2-color: #D0BCD5;
 
-  /* change the values below to your chosen font(s) */
-  --heading-font: "EB Garamond", "IM Fell French Canon SC";
-  --paragraph-font: "Times New Roman", Helvetica, sans-serif;
+  --heading-font: "Lato", Helvetica, sans-serif;
+  --paragraph-font: "EB Garamond", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #1B1725;  /* headlines on a white background */ 
@@ -24,15 +22,66 @@
   --nav-hover-background-color: #1B1725;
 }
 
+body {
+    background: black;
+    margin: 0 auto;
+}
+
+.home-parallax {
+    background-image: url("/images/brandi-redd-white-background-large.jpg");
+    font-size: 5em;
+  
+    min-height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.page-title {
+    color: var(--headline-color-on-white);
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
-    color: var(--headline-color-on-white);
+    color: var(--headline-color-on-color);
+    font-size: 2em;
 }
 
 p {
     font-family: var(--paragraph-font);
-    color: var(--paragraph-color-on-white);
+    color: var(--paragraph-color-on-color);
     padding: 0.25em;
+    font-size: 1.5em;
+}
+
+ul {
+    font-family: var(--paragraph-font);
+    color: var(--paragraph-color-on-color);
+    padding: 0.25em;
+    font-size: 1.5em;
+    list-style-type: disc;
+    list-style-position: inside;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 0% 10%;
+}
+
+.home-grid img {
+    border-radius: 50px;
+    margin: 50px 0px 10px 0px;
+}
+
+.home-grid .home-text {
+    margin: 5% 10%;
 }
 
 header {
@@ -42,6 +91,7 @@ header {
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
+    align-content: stretch;
 }
 
 .logo {
@@ -56,12 +106,14 @@ nav {
     display: grid;
     grid-template-columns: 1fr;
     margin: auto;
+    padding: 10px;
+    font-weight: bold;
 }
 
 nav a {
-    padding: 0.25em;
     min-width: 120px;
     text-decoration: none;
+    margin: 10px;
 }
 
 nav a:link, nav a:visited {
@@ -73,6 +125,32 @@ nav a:hover {
     background-color: var(--nav-hover-background-color);
 }
 
+footer {
+    padding: 1em;
+    color: var(--headline-color-on-color);
+    background-color: var(--paragraph-background-color);
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    align-content: stretch;
+}
+
+footer a {
+    color: var(--paragraph-color-on-color);
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--accent1-color)
+}
+
+.social img {
+    width: 5em;
+    text-align: right;
+    margin-top: 0.5em;
+}
+
 @media (min-width: 768px) {
     .logo {
         width: 7em;
@@ -81,7 +159,21 @@ nav a:hover {
         grid-template-columns: 1fr 1fr;
         text-align: left;
     }
+    .home-grid {
+        grid-template-columns: 1fr 60%;
+    }
+    .home-text {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    .home-grid img {
+        border-radius: 50px;
+        margin: 50px 0px;
+    }
     nav {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    footer {
         grid-template-columns: repeat(3, 1fr);
     }
 }
