Reduced size of image

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .home-parallax {
-    background-image: url("/images/brandi-redd-white-background-large.jpg");
+    background-image: url("/images/brandi-redd-white-background-large.webp");
     font-size: 5em;
   
     min-height: 500px;
