--- a/styles/style.css
+++ b/styles/style.css
@@ -77,15 +77,15 @@ ul {
 
 .home-grid img {
     border-radius: 50px;
-    margin: 50px 0px 10px 0px;
+    margin: 50px 0px;
 }
 
 .home-grid .home-text {
-    margin: 5% 10%;
+    margin: 5%;
 }
 
 header {
-    padding: 1em;
+    padding: 10px;
     color: var(--headline-color-on-color);
     background-color: var(--paragraph-background-color);
     display: grid;
@@ -96,6 +96,7 @@ header {
 
 .logo {
     width: 7em;
+    padding: 10px;
 }
 
 nav {
@@ -105,15 +106,16 @@ nav {
     font-size: 1.5em;
     display: grid;
     grid-template-columns: 1fr;
-    margin: auto;
-    padding: 10px;
+    padding: 0.25em;
     font-weight: bold;
+    border-radius: 10px;
+    font-family: "Lato", Helvetica, sans-serif;
 }
 
 nav a {
     min-width: 120px;
     text-decoration: none;
-    margin: 10px;
+    padding: 0.5em 3em;
 }
 
 nav a:link, nav a:visited {
@@ -123,6 +125,8 @@ nav a:link, nav a:visited {
 nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
+    border-radius: 5px;
+    border-color: var(--secondary-color);
 }
 
 footer {
@@ -153,10 +157,10 @@ footer a:hover {
 
 @media (min-width: 768px) {
     .logo {
-        width: 7em;
+        width: 5em;
     }
     header {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 25% 1fr;
         text-align: left;
     }
     .home-grid {
