--- a/styles/style.css
+++ b/styles/style.css
@@ -56,13 +56,13 @@ body {
     box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.2); 
 }
 
-h1, h2, h3, h5, h6 {
+h1, h2 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-color);
     font-size: 2em;
 }
 
-h4 {
+h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-color);
     font-size: 1.5em;
