--- a/styles/style.css
+++ b/styles/style.css
@@ -154,7 +154,7 @@ nav a {
     line-height: 3em;
     min-width: 120px;
     text-decoration: none;
-    padding: 0.5em 3em;
+    padding: 0.5em 0;
 }
 
 nav a:link, nav a:visited {
